# FHIR_MEDS

./: .gitignore  CITATION.cff  README.md  check_output.py  pyproject.toml
.github/workflows/: python-build.yaml
src/fhir2meds/: __init__.py  __main__.py  cli.py  dataset.yaml  event_conversion.py  fhir_parser.py  meds_writer.py  metadata_writer.py  observation_mapper.py
src/fhir2meds/configs/: event_configs.yaml  main.yaml
static/: dataset.yaml  event_configs.yaml
tests/: test_fhir_event_conversion.py  test_fhir_parsing.py  test_observation.py  test_time_parsing.py
