[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir2meds"
dynamic = ["version"]
description = "Convert HL7 FHIR (v4/v5) Observation resources to MEDS sharded Parquet format."
authors = [ { name = "Robin P. van de Water", email = "robin.vandewater@hpi.de" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fhir.resources>=6.3.0",
    "pyarrow>=12.0.0",
    "polars>=1.20.0",
    "pyyaml>=6.0",
    "meds~=0.4.0",
    "requests",
    "beautifulsoup4",
    "hydra-core"
]
[tool.setuptools_scm]

[project.scripts]
fhir2meds = "fhir2meds.__main__:main"
FHIR_MEDS = "fhir2meds.__main__:main"
MEDS_ON_FHIR = "fhir2meds.__main__:main"